--- a/artists.html
+++ b/artists.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <meta charset="utf-8">
     <link rel="stylesheet" href="weekfivestyle.css">
-    <title></title>
+    <title>hhh</title>
   </head>
   <body>
 yup
