--- a/week 5.html
+++ b/week 5.html
@@ -1,37 +1,26 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <meta charset="utf-8">
     <link rel="stylesheet" href="weekfivestyle.css">
     <title></title>
-      </head>
+  </head>
+
   <body>
+    <div class="w3-sidebar w3-bar-block" style="width:25%">
+    
+
+      </div>
     <div class="container">
       <div class="row">
         <div class="col">
-
           <h1>NeedleSoup Records</h1>
           <h2>Presents</h2>
           <a href="Artists.html"><button>Artists</button></a>
- <a href="recordings.html"><button>Recordings</button></a>
-<a href="Artists.html"><button>Merch</button></a>
-<a href="Artists.html"><button>Contact</button></a>
+<a href="Merch.html"><button>Records</button></a>
+<a href="Contact.html"><button>Contact</button></a>
 
-
-  <p>  Well the kids are all hopped up and ready to go
-<br><b>They're ready to go now</b>
-<br>they got their surfboards
-<br>And they're going to the discotheque A-Go-Go
-<br>But she just couldn't stay she had to break away
-<br>Well New York City really has is all
-<br>oh yeah
-<br>oh yeah</p>
-
-<p>Sheena is a punk rocker
-<br>Sheena is a punk rocker
-<br>Sheena is a punk rocker now</p>
 </div>
 
 </div>
