--- a/Merch.html
+++ b/Merch.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
+<html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <meta charset="utf-8">
     <link rel="stylesheet" href="weekfivestyle.css">
     <title></title>
   </head>
-
 </html>
