--- a/artists.html
+++ b/artists.html
@@ -4,9 +4,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <meta charset="utf-8">
     <link rel="stylesheet" href="weekfivestyle.css">
-    <title>Artist Page</title>
+    <title></title>
   </head>
-  <body>
-yup
-  </body>
+
+  <h1>Artists</h1>
+
+  <div class="row">
+  <div class="column">
+
+    <div class="column">
+    <img src="NearlyCrucial.jpg">
+    <img src="TeaAndSympathy.jpg">
+    <img src="ArtificialEye.jpg">
+    <img src="NightmareMushroom.jpg">
+    </div>
+
+    </div>
+</div>
+
 </html>
