--- a/week 5.html
+++ b/week 5.html
@@ -7,25 +7,17 @@
     <title></title>
   </head>
 
-  <body>
-    <div class="w3-sidebar w3-bar-block" style="width:25%">
-    
+<body>
+<h1>NeedleSoup Records</h1>
+<h2>Presents</h2>
 
-      </div>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1>NeedleSoup Records</h1>
-          <h2>Presents</h2>
-          <a href="Artists.html"><button>Artists</button></a>
-<a href="Merch.html"><button>Records</button></a>
-<a href="Contact.html"><button>Contact</button></a>
+  <div class="sidebar">
+    <ul>
+<li><a href="Artists.html"><link>Artists</link></a></li>
+<li><a href="Merch.html"><link>Records</link></a></li>
+<li><a href="Contact.html"><link>Contact</link></a></li>
+  </ul>
 
-</div>
+</body>
 
-</div>
-
-</div>
-
-  </body>
 </html>
